--- a/style.css
+++ b/style.css
@@ -1,3 +1,25 @@
+
+/* ======================= DEFAULTS ===========================*/
+*{
+    box-sizing: border-box;
+}
+html,
+body{
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #f6fafe;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, 
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
+.td-none{
+    text-decoration: none;
+    color: inherit;
+}
+
+/* ======================= COMPONENTS ===========================*/
 header{
     width: 100%;
     height: 80px;
@@ -7,6 +29,74 @@ header{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid red;
     box-sizing: border-box;
 }
+header nav{
+    height: inherit;
+}
+header ul{
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+}
+header .navmenu{
+    display: flex;
+}
+header .navmenu .navitem a{
+    display: block;
+    text-decoration: none;
+    padding: 30px 16px;
+    color: #383838;
+}
+header .navmenu .navitem{
+    position: relative;
+}
+header .navmenu .navitem .dropdown{
+    width: 190px;
+    position: absolute;
+    top: 80px;
+    left: 0px;
+    background-color: #fff;
+    border-radius: 5px;
+    -webkit-box-shadow: -1px -12px 28px 7px rgba(0, 0, 0, 0.11);
+    -moz-box-shadow: -1px -12px 28px 7px rgba(0, 0, 0, 0.11);
+    box-shadow: -1px -12px 28px 7px rgba(0, 0, 0, 0.11);;
+    opacity: 0;
+    z-index: -5;
+    transform: translateY(35px);
+}
+header .navmenu .navitem:hover .dropdown{
+    opacity: 1;
+    z-index: 5;
+    transform: translateY(0);
+    transition: all 0.25s cubic-bezier(0.4, 0.01, 0.165, 0.99);
+
+}
+header .navmenu .navitem .dropdown::after{
+    content: '';
+    position: absolute;
+    top: -20px;
+    left: 15%;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid white;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+header .navmenu .navitem .dropdown a{
+    padding: 16px; 
+}
+
+
+.logo-wrapper{
+    font-size: 1.4rem;
+}
+.logo-wrapper span{
+    background-color: #3e86ac;
+    padding: 0 5px;
+    line-height: 0;
+    border-radius: 2px;
+    color: white;
+}
+
+
+/* ======================= PAGES ===========================*/
