--- a/style.css
+++ b/style.css
@@ -34,6 +34,10 @@ header{
     align-items: center;
     box-sizing: border-box;
 }
+header .menu-icon{
+    font-size: 32px;
+    display: none; 
+}
 header nav{
     display: flex; 
     align-items: center;
@@ -52,6 +56,10 @@ header .navmenu .navitem a{
     text-decoration: none;
     padding: 30px 16px;
     color: #383838;
+}
+
+header .navmenu .navitem a:hover{
+   color: #6babf3;
 }
 header .navmenu .navitem .navicon{
     transform: translateY(4px);
@@ -106,6 +114,55 @@ header .navmenu .navitem .dropdown a{
     border-radius: 2px;
     color: white;
 }
+/* ============ meaia queries of header ============= */
+@media only screen and (max-width: 1024px){
 
+    header{
+        padding: 0 10px;
+   
+    } 
+}
+
+@media only screen and (max-width: 800px){
+  
+    header .menu-icon{
+        display: block;
+    }
+    header nav{
+        
+    }
+    header .navmenu{
+        position: fixed;
+        left: 0;
+        top: 0;
+        flex-direction: column;
+        height: 100%;
+        width: 250px;
+        background-color: #fff;
+        overflow-y: scroll;
+        z-index: 99999;
+        padding: 50px 0;
+    }
+    header .navmenu .navitem a{
+       padding: 16px;
+    }
+    header .navmenu .navitem{
+        /* =============== */
+        position: relative;
+    }
+    header .navmenu .navitem .dropdown{
+        width: 100%;
+        position: static;  
+        border-radius: 0px;
+        box-shadow: none;
+        opacity: 1;
+        max-height: 200px;
+        z-index: 1;
+        transform: translateY(0px);
+    }
+    header .navmenu .navitem .dropdown a{
+    padding-left: 32px; 
+    }  
+}
 
 /* ======================= PAGES ===========================*/
