--- a/style.css
+++ b/style.css
@@ -38,6 +38,9 @@ header .menu-icon{
     font-size: 32px;
     display: none; 
 }
+header .nav-overlay{
+    display: none;
+}
 header nav{
     display: flex; 
     align-items: center;
@@ -128,6 +131,15 @@ header .navmenu .navitem .dropdown a{
     header .menu-icon{
         display: block;
     }
+    header .nav-overlay.open{
+        display: block;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.45);
+    }
     header nav{
         
     }
@@ -142,6 +154,12 @@ header .navmenu .navitem .dropdown a{
         overflow-y: scroll;
         z-index: 99999;
         padding: 50px 0;
+        transform: translateX(-250px);
+        transition: all 0,25s ease-in-out;
+    }
+    header .navmenu.open{
+        transform: translateX(0px);
+        transition: all 0.25s ease-in-out;
     }
     header .navmenu .navitem a{
        padding: 16px;
