--- a/admin/style.css
+++ b/admin/style.css
@@ -21,6 +21,9 @@ body{
 .hide{
     display: none;
 }
+.center{
+    text-align: center;
+}
 
 /* ======================= COMPONENTS ===========================*/
 header{
@@ -194,6 +197,25 @@ header .navmenu .navitem .dropdown a{
     header .navmenu .navitem .dropdown a{
     padding-left: 32px; 
     }  
+}
+
+/* ========parit dashboard admin Layout======== */
+.page-wrapper{
+    display: flex;
+    min-height: calc(100% - 80px);
+}
+
+.page-wrapper .sidebar{
+    flex-basis: 18%;
+    min-height: 100%;
+    min-width: 260px;
+    background-color: #0a3654;
+
+}
+.page-wrapper .page-content{
+    flex-basis: 82%;
+    overflow-x: hidden;
+    border: 1px solid blue;
 }
 
 /* ======================= PAGES ===========================*/
