--- a/admin/style.css
+++ b/admin/style.css
@@ -204,6 +204,9 @@ header .navmenu .navitem .dropdown a{
     display: flex;
     min-height: calc(100% - 80px);
 }
+.page-wrapper .sidebar-overlay{
+    display: none;
+}
 
 .page-wrapper .sidebar{
     flex-basis: 18%;
@@ -212,10 +215,65 @@ header .navmenu .navitem .dropdown a{
     background-color: #0a3654;
 
 }
+.page-wrapper .sidebar .list-menu{
+    margin: 0;
+    padding: 0;
+    padding-top: 2rem;
+    overflow: hidden;
+}
+.page-wrapper .sidebar .list-menu li a{
+    text-decoration: none;
+    color: #8aa3a9;
+    display: block;
+    padding: 15px 30px;
+    position: relative;
+}
+.page-wrapper .sidebar .list-menu li a:hover{
+    color: white;
+}
+.page-wrapper .sidebar .list-menu li a .menu-icon{
+    margin-right: 12px;
+    
+}
+.page-wrapper .sidebar .list-menu li a .chevron-forward{
+   position: absolute;
+   right: 20px;
+}
+
 .page-wrapper .page-content{
     flex-basis: 82%;
     overflow-x: hidden;
-    border: 1px solid blue;
+}
+@media only screen and (max-width: 800px){
+    .page-wrapper{
+        display: block;
+    }
+    .page-wrapper .sidebar{
+        position: fixed;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 240px;
+        z-index: 99999;
+        overflow: hidden;
+        transform: translateX(-280px);
+        transition: transform 0.25s ease-in-out;
+    }
+    .page-wrapper .sidebar.open{
+        transform: translateX(0px);
+        transition: transform 0.25s ease-in-out;
+    }
+    .page-wrapper .sidebar-overlay.open{
+         display: block;
+         position: fixed;
+         top: 0;
+         left: 0;
+         height: 100%;
+         width: 100%;
+         z-index: 2;
+         background-color: rgba(0, 0, 0, 0.45);
+    }
+
 }
 
 /* ======================= PAGES ===========================*/
