--- a/admin/style.css
+++ b/admin/style.css
@@ -24,6 +24,9 @@ body{
 .center{
     text-align: center;
 }
+.logout-link{
+    color: #a73b1a;
+}
 
 /* ======================= COMPONENTS ===========================*/
 header{
@@ -212,6 +215,9 @@ header .navmenu .navitem .dropdown a{
     background-color: #0a3654;
 
 }
+.page-wrapper .sidebar .sidebar-author-mobile{
+    display: none;
+}
 .page-wrapper .sidebar .list-menu{
     margin: 0;
     padding: 0;
@@ -259,6 +265,22 @@ header .navmenu .navitem .dropdown a{
     .page-wrapper .sidebar.open{
         transform: translateX(0px);
         transition: transform 0.25s ease-in-out;
+    }
+    .page-wrapper .sidebar .sidebar-author-mobile{
+        display: block;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 76px;
+    }
+    .page-wrapper .sidebar .sidebar-author-mobile .avatar{
+        height: 90px;
+        width: 90px;
+        border-radius: 50%;
+    }
+    .page-wrapper .sidebar .sidebar-author-mobile .author-name{
+        color: #8aa3a9;
+        margin: 8px auto;
     }
 
 
